Add sqs overview dashboard into documentation

--- a/x-pack/metricbeat/module/aws/sqs/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/sqs/_meta/docs.asciidoc
@@ -10,3 +10,10 @@ cloudwatch:GetMetricData
 ec2:DescribeRegions
 sqs:ListQueues
 ----
+
+[float]
+=== Dashboard
+
+The aws sqs metricset comes with a predefined dashboard. For example:
+
+image::./images/metricbeat-aws-sqs-overview.png[]
