--- a/x-pack/metricbeat/module/aws/s3_request/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/s3_request/_meta/docs.asciidoc
@@ -9,3 +9,10 @@ Some specific AWS permissions are required for IAM user to collect AWS s3_reques
 ec2:DescribeRegions
 cloudwatch:GetMetricData
 ----
+
+[float]
+=== Dashboard
+
+The aws s3 metricset comes with a predefined dashboard. For example:
+
+image::./images/metricbeat-aws-s3-overview.png[]
