--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -37,6 +37,7 @@ https://github.com/elastic/beats/compare/v6.6.2...6.6[Check the HEAD diff]
 *Filebeat*
 
 - Fix a bug with the convert_timezone option using the incorrect timezone field. {issue}11055[11055] {pull}11164[11164]
+- Fix goroutine leak happening when harvesters are dynamically stopped. {pull}11263[11263]
 
 *Heartbeat*
 
