Stop waiting for signals on closed outleters (#11263)
Outleters start a goroutine to handle the finalization of filebeat. If the
outleter is closed by other means the goroutine will be kept running
even if it has nothing to do, leaking goroutines.

Stop this goroutine if the outleter is closed.

(cherry picked from commit 57c98914eacd78160ee1a9ac75894ebdf32d4fb2)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -39,6 +39,8 @@ https://github.com/elastic/beats/compare/v6.7.0...6.x[Check the HEAD diff]
 
 *Filebeat*
 
+- Fix goroutine leak happening when harvesters are dynamically stopped. {pull}11263[11263]
+
 *Heartbeat*
 
 *Journalbeat*
