revert to etcd GA metrics as default

--- a/metricbeat/docs/modules/etcd.asciidoc
+++ b/metricbeat/docs/modules/etcd.asciidoc
@@ -29,7 +29,7 @@ in <<configuration-metricbeat>>. Here is an example configuration:
 ----
 metricbeat.modules:
 - module: etcd
-  metricsets: ["metrics"]
+  metricsets: ["leader", "self", "store"]
   period: 10s
   hosts: ["localhost:2379"]
 ----
