[6.6] Backport multiple doc PRs (#10647 #10740 #10741 #10742 #10833 #10859 ) (#11122)
* Fix log path format in logging example (#10647)

* Add systemd compatibility statement (#10740)

* Remove simplistic docker command examples (#10741)

* Fix attribute references (#10742)

* Remove broken link to docker source code (#10833)

* Remove link to old repo for docker source

* Remove dockergithub attribute

* Add links to Logstash docs about working with Filebeat modules (#10859)

--- a/filebeat/docs/getting-started.asciidoc
+++ b/filebeat/docs/getting-started.asciidoc
@@ -231,10 +231,7 @@ sudo service {beatname_lc} start
 
 *docker:*
 
-["source", "shell", subs="attributes"]
-----------------------------------------------------------------------
-docker run {dockerimage}
-----------------------------------------------------------------------
+See <<running-on-docker>>.
 
 *mac and linux:*
 
