[7.0] Backport multiple doc PRs (#9167 #10647 #10740 #10741 #10742 #10833 #10859)  (#11120)
* Add steps for loading journalbeat dashboards  (#9167)

* Add steps for loading and viewing dashboards

* Deprecate global options for backoff, max_backoff, seek, and include_matches

* Add screen capture

* Move tip to correct place in doc

* Fix log path format in logging example (#10647)

* Add systemd compatibility statement (#10740)

* Remove simplistic docker command examples (#10741)

* Fix attribute references (#10742)

* Remove broken link to docker source code (#10833)

* Remove link to old repo for docker source

* Remove dockergithub attribute

* Add links to Logstash docs about working with Filebeat modules (#10859)

--- a/packetbeat/docs/gettingstarted.asciidoc
+++ b/packetbeat/docs/gettingstarted.asciidoc
@@ -270,10 +270,7 @@ sudo service {beatname_lc} start
 
 *docker:*
 
-["source","sh",subs="attributes"]
-----------------------------------------------------------------------
-docker run {dockerimage}
-----------------------------------------------------------------------
+See <<running-on-docker>>.
 
 *mac and linux:*
 
