Set log.file.path when reading from file

--- a/winlogbeat/docs/fields.asciidoc
+++ b/winlogbeat/docs/fields.asciidoc
@@ -3823,6 +3823,18 @@ Fields from the Windows Event Log.
 
 
 
+*`log.file.path`*::
++
+--
+type: keyword
+
+required: False
+
+The name of the file the event was read from when Winlogbeat is reading directly from an .evtx file.
+
+
+--
+
 *`event.code`*::
 +
 --
