--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -269,7 +269,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add `entity_id` fields. {pull}10500[10500]
 - Add seven dashboards for the system module. {pull}10511[10511]
 - Move System module to beta. {pull}10800[10800]
-- Login dataset: Add event category and type.
+- Login dataset: Add event category and type. {pull}11339[11339]
 
 *Filebeat*
 
