--- a/filebeat/docs/modules/iis.asciidoc
+++ b/filebeat/docs/modules/iis.asciidoc
@@ -17,8 +17,8 @@ include::../include/what-happens.asciidoc[]
 === Compatibility
 
 This module requires the
-{elasticsearch-plugins}/ingest-user-agent.html[ingest-user-agent] and
-{elasticsearch-plugins}/ingest-geoip.html[ingest-geoip] Elasticsearch plugins.
+{plugins}/ingest-user-agent.html[ingest-user-agent] and
+{plugins}/ingest-geoip.html[ingest-geoip] Elasticsearch plugins.
 
 The IIS module was tested with logs from version 10.
 
