[Auditbeat] Login dataset: Add event category and type (#11339)
Adds `event.category: authentication` and `event.type: authentication_success` (or `authentication_failure`).

(cherry picked from commit 09a8fa8aa088fecb15d474a14cdbdce29e97565a)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -117,6 +117,7 @@ https://github.com/elastic/beats/compare/v7.0.0-beta1...master[Check the HEAD di
 *Auditbeat*
 
 - Move System module to beta. {pull}10800[10800]
+- Login dataset: Add event category and type. {pull}11339[11339]
 
 *Filebeat*
 
