--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -1256,20 +1256,27 @@ The fields added to the event look like the following:
 [source,json]
 -------------------------------------------------------------------------------
 {
-   "host":{
-      
-      "ip": ["192.168.0.1", "10.0.0.1"],
-      "mac": ["00:25:96:12:34:56", "72:00:06:ff:79:f1"],
-      "geo": {
-          "continent_name": "North America",
-          "country_iso_code": "US",
-          "region_name": "New York",
-          "region_iso_code": "NY",
-          "city_name": "New York",
-          "name": "nyc-dc1-rack1",
-          "location": "40.7128, -74.0060"
-        }
-   }
+  "observer" : {
+    "hostname" : "avce",
+    "type" : "heartbeat",
+    "vendor" : "elastic",
+    "ip" : [
+      "192.168.1.251",
+      "fe80::64b2:c3ff:fe5b:b974",
+    ],
+    "mac" : [
+      "dc:c1:02:6f:1b:ed",
+   ],
+    "geo": {
+      "continent_name": "North America",
+      "country_iso_code": "US",
+      "region_name": "New York",
+      "region_iso_code": "NY",
+      "city_name": "New York",
+      "name": "nyc-dc1-rack1",
+      "location": "40.7128, -74.0060"
+    }
+  }
 }
 -------------------------------------------------------------------------------
 
